--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
     "@types/react-router": "^5.1.17",
+    "@types/redux-persist": "^4.3.1",
     "eslint": "^7.11.0",
     "history": "^5.2.0",
     "node-sass": "^4.14.1",
