--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
-    "react-loader-spinner": "^4.0.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^6.0.0-beta.8",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.11.0",
     "typescript": "~4.1.5"
   },
   "scripts": {
