--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "movies",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://friendlycomrade.github.io/",
   "dependencies": {
     "@csstools/normalize.css": "^12.0.0",
     "@reduxjs/toolkit": "^1.5.1",
@@ -16,6 +17,7 @@
     "@types/react-router": "^5.1.17",
     "@types/redux-persist": "^4.3.1",
     "eslint": "^7.11.0",
+    "gh-pages": "^3.2.3",
     "history": "^5.2.0",
     "node-sass": "^4.14.1",
     "react": "^17.0.2",
@@ -31,7 +33,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
