--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@types/react-router": "^5.1.17",
     "@types/redux-persist": "^4.3.1",
     "eslint": "^7.11.0",
-    "gh-pages": "^3.2.3",
     "history": "^5.2.0",
     "node-sass": "^4.14.1",
     "react": "^17.0.2",
@@ -35,7 +34,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
